docs: 자바객체지향의원리이해 2장 내용 일부 요약

--- a/java/자바객체지향의원리와이해/자바와절차적-구조적프로그래밍.md
+++ b/java/자바객체지향의원리와이해/자바와절차적-구조적프로그래밍.md
@@ -54,3 +54,68 @@ public class Start {
    8. system.out.println() 코드가 실행되면서 GPU에 화면 출력을 의뢰한다.
 9. main()에 닫는 중괄호를 만나면 main()스택프레임이 소멸된다.
 10.  main()메소드가 소멸되면 JRE는 JVM을 종료시키고 JRE도 자체적으로 운영체제 상의 메모리에서 사라진다.
+
+#### 블록과 메서드를 사용할떄 메서드 스택 프레임 
+
+아래 코드는 책에서 if문이 있을때와 method가 있을때를 두개를 합친 코드이다.
+```java
+public class start3 {
+  public static void main(String[] args) {
+    int i = 10;
+    int k = 20; // 4번째 줄
+    if (i == 10) {
+      int m = k + 5;
+      k = m; // 7번째 줄
+    } else {
+      int p = k + 10;
+      k = p;
+    }
+    // 12번째줄
+    m = square(k); 
+    // k = m + p;
+  }
+  
+  private static int square(int k) {
+    int result;
+    k = 25;
+    result = k;
+    return result; // 21번째 줄
+  }
+}
+```
+
+4, 7, 12, 20번째 줄의 T메모리의 스냅샷을 살펴보자
+
+[그림]
+4번째 줄의 T메모리 스냅샷
+
+[그림1]
+7번째 줄의 T메모리 스냅샷
+
+[그림2]
+12번째 줄의 T메모리 스냅샷
+
+12번째 줄이 되어서는 if블록의 지역변수들이 모두 사라진다.
+따라서 "외부 블록에서 내부 블록의 변수는 접근할 수 없지만 내부 블록에서 외부 블록의 변수에 접근하는 것은 가능하다."
+이것은 제임스 고슬링이 일부러 만드는 것이 아니라 메모리 변화에 따라서 당연히 그럴 수 밖에 없다는 결론이다.
+
+
+[그림3]
+20번째 줄의 T메모리 스냅샷
+
+main()메서드의 지역 변수 m에 직접 접근할 수 있을까? 절대 접근할 수 없다.
+메서드를 블랙박스화한다는 말을 들어본적 있을것이다.
+이것은 입력 값들(인자 리스트)과 반환값에 의해서만 메서드 사이에서 값이 전달될 뿐 서로 내부의 지역 변수를 볼 수 없다는 것을 의미한다.
+
+왜? 다른 메소드안에 변수를 참조하지 못하게 만들었을까?
+1. 서로 무단으로 침범하게 하면 자바 월드에 문제를 유발할 수 있기 때문이다.
+2. 포인터 문제이다. 다른 메소드의 지역 변수(m)에 데이터를 접근하기위해서는 다른 메소드의 지역변수(m)의 포인터 위치를 알아야하는데 자바에서는 포인터가 없다.
+3. 예제코드에서는 sqaure()메서드에서는 main()메서드 내부에서만 호출하지만 실제 application에서는 다양한 곳에서 메서드가 호출된다. 
+다양한 곳에서 메서드가 호출되면 스택 프레임은 개발자가 생각한것과 다르게 여러 스택프레임이 생기고 없어지는 상황일것이다. 
+이때 다른 메서드의 지역변수를 참조하기 위해서는 포인터가 필요하다.
+자바에서는 포인터를 사용할 수 없으므로 결국 언어 스펙상으로도 메서드 스택 프레임 사이에 변수를 참조하는 것을 불가능하다는 결론에 도달할 수 있다.
+
+메소드 파라미터로 전달되는 변수 값은 포인터가 아닌가요?
+포인터가 아니라 값을 복사해서 전달한다. 이런 방식을 call by value라고 한다.
+
+#### 여러 객체가 있을때 스택 프레임
