--- a/java/자바객체지향의원리와이해/자바와절차적-구조적프로그래밍.md
+++ b/java/자바객체지향의원리와이해/자바와절차적-구조적프로그래밍.md
@@ -118,4 +118,67 @@ main()메서드의 지역 변수 m에 직접 접근할 수 있을까? 절대 접
 메소드 파라미터로 전달되는 변수 값은 포인터가 아닌가요?
 포인터가 아니라 값을 복사해서 전달한다. 이런 방식을 call by value라고 한다.
 
-#### 여러 객체가 있을때 스택 프레임
+#### 전역 변수와 메모리: 전역 변수 쓰지 말라니까요!
+
+```java
+public class Start5 {
+  static int share;
+  
+  public static void main(String[] args) { // 4번쨰줄
+    share = 55;
+    
+    int k = fun(5, 7); // 7번째줄
+    
+    System.out.println(share);
+  }
+  
+  private static int fun(int m, int p) { // 12번째줄
+    share = m + p; // 13번째줄
+    return m - p;
+  }
+}
+```
+[그림 2-33]
+
+코드를 보면 share변수에 static키워드가 붙어있다. 그래서 share변수는 T메모리의 스태틱 영역에 변수 공간이 할당된다. 
+
+[그림 2-34]
+4번쨰 줄을 실행하면 위 그림과 같을 것이다.
+
+[그림 2-35]
+12번째줄 실행후 T메모리 스냅샷
+
+[그림 2-36]
+13번째줄 실행후 T메모리 스냅샷
+share변수에 m + p 값이 할당된것을 확인할 수 있다.
+
+[그림 2-39]
+마지막으로 16번째 줄이 실행후 T메모리 스냅샷
+16번째 닫는 중괄호를 만나면 스택프레임이 사라지게 된다.
+
+이렇게 static share변수를 이용하여 전역 변수(공유변수)를 살펴봤다.
+(전역변수란 어디서든 접근 가능한 변수를 칭한다.)
+
+그런데 전역 변수를 쓰지 말라고들 하는데 왜 그럴까?
+프로젝트가 커지면 여러 메서드에서 전역 변수의 값을 변경하기 시작하면 T메모리로 추적하지 않는 이상 전역 변수에 저장되어있는 값을 파악하기 쉽지 않다.
+다만 읽기 전용으로 값을 공유해서 전역 상수로 쓰는 것은 적극 추천한다. 
+예를 들면 Math함수에서 PI속성은 전역 상수로 사용된다.
+ex) Math.PI 
+
+### 멀티 스레드/ 멀티프로세스의 이해
+
+[그림 2-40]
+멀티 스레드의 T 메모리 모델은 스택 영역을 스레드 개수만큼 분할해서 쓰는 것이다. 
+
+[그림 2-41]
+멀티 프로세스는 다수의 데이터 저장 영역, 즉 다수의 T메모리를 갖는 구조이다.
+
+멀티 프로세스는 각 프로세스마다 각자의 T메모리가 있고 각자 고유의 공간이므로 서로 참조할 수 없다.
+그에 반해 멀티 스레드는 하나의 T메모리만 사용하는데 스택 영역만 분할해서 사용하는 구조다.
+멀티 프로세스는 하나의 프로세스가 다른 프로세스의 T메모리 영역을 절대로 침범할 수 없는 메모리 안전한 구조이지만 메모리 사용량은 그만큼 크다.
+
+반면 멀티 스레드는 하나의 T메모리 안에서 스택 영역만 분할한 것이기 때문에 하나의 스레드에서 다른 스레드의 스택영역에는 접근할 수 없지만 스태틱 영역과 힙 영역은 공유해서 사용하는 구조다.
+따라서 멀티 프로세스 대비 메모리를 적게 사용할 수 있는 구조이다.
+
+자바 웹 프로그래밍을 공부해 본 적이 있다면 서블릿은 요청당 프로세스가 아닌 요청당 스레드를 생성한다는 말이 머릿속 어딘가에 콜 박혀있을것이다.
+이제는 요청당 스레드(Servlet)가 요청당 프로세스(CGI)보다 왜 더 효율적인지 이해할 수 있을 것이다.
