docs: 자바객체지향의원리이해 2장 내용 일부 요약

--- a/java/자바객체지향의원리와이해/자바와절차적-구조적프로그래밍.md
+++ b/java/자바객체지향의원리와이해/자바와절차적-구조적프로그래밍.md
@@ -182,3 +182,11 @@ ex) Math.PI
 
 자바 웹 프로그래밍을 공부해 본 적이 있다면 서블릿은 요청당 프로세스가 아닌 요청당 스레드를 생성한다는 말이 머릿속 어딘가에 콜 박혀있을것이다.
 이제는 요청당 스레드(Servlet)가 요청당 프로세스(CGI)보다 왜 더 효율적인지 이해할 수 있을 것이다.
+
+### 정리
+
+사실 지금까지 공부한 2장은 객체 지향뿐만 아니라 현존하는 거의 모든 언어가 메모리를 사용하는 방식에 대해 설명한 것이다.
+
+스태딕: 클래스의 놀이터
+스택: 메서드의 놀이터
+힙: 객체의 놀이터
