--- a/spring/토비의-스프링부트-3.1/3장-템플릿.md
+++ b/spring/토비의-스프링부트-3.1/3장-템플릿.md
@@ -1,53 +1,288 @@
+요약보다는 핵심이 되는 내용을 질문으로 만들고 답변을 달아두는 형식으로 작성했습니다.
+
 # 3장 템플릿
     
-개방 폐쇄원칙이란?
+- 개방 폐쇄 원칙이란?
+<details>
+<summary>답변</summary>
+
+---
+확장에는 열려있고 코드 변경에는 굳게 닫혀 있다는 객체 지향 설계의 핵심 원칙이다. </br>
+(관심사가 분리되면 다른 관심사의 변경에는 코드 변경이 일어나지 않는다.)
+---
+</details>
 
 ## 3.1 다시보는 초난감 DAO
 
 기존 UserDAO는 많은 문제점을 해결헀지만 "예외처리"라는 문제점이 있다.
 
 ### 3.1.1 예외처리 기능을 갖춘 DAO
+
+- 제한적 리소스를 반환하지 않고 중간에 에러가 발생하면 리소스는 어떻게 되는가? </br>
+<details>
+<summary>답변</summary>
+
+---
+제한적 리소스를 사용하다가 close를 하지 않으면 connection이 계속 쌓이게 되고 </br>
+connection pool에 connection이 모자르게 되면 리소스가 부족하다는 에러가 띄우고 서버가 중단될 수 있다. </br>
+---
+</details>
     
---> 제한적 리소스를 공유해 사용하는 로직에 반드시 필요한 것은? 
+- 제한적 리소스를 공유해 사용하는 로직에 반드시 필요한 것은? 
 
 <details>
 <summary>답변</summary>
-try - catch - finally 로직을 통해서 제한적 리소스를 사용하다가 에러가 발생해도 close를 통해서 반환하는 로직이 꼭 들어가야한다. </br>
+
+---
+try - catch - finally 로직을 통해서 제한적 리소스를 사용하다가 에러가 발생해도 반환 로직(close)를 통해서 반환해야한다. </br>
+
+---
+
 </details>
 
---> 제한적 리소스를 반환하지 않고 중간에 에러가 발생하면 리소스는 어떻게 되는가? </br>
---> 어떤 상황에서도 리소르는 반환(close)하도록 만들 수 있는 방법은? </br>
+아래와 같이 코드가 있을때 어느 try - catch - finally 로직은 넣는다면 어떤 순서대로 close해야하는가?
+```java
+public void deleteAll() throws SQLException {
+  Connection c = dataSource.getConnection());
+  PreparedStatement ps = c.prepareStatement("delete form users");
+  ps.excuteUpdate();
+}
+```
 
-아래와 같이 코드가 있을때 어느 try - catch - finally 로직에서 어떤 순서로 리소스를 반환해야하는가?
-getConnection();
-prepareStatment();
-executeQuery();
+<details>
+<summary>답변</summary>
+
+---
+close는 만들어진 순서의 반대로 하는 것이 원칙이다.
+
+```java
+public void deleteAll() throws SQLException {
+  Connection c = null;
+  PreparedStatement ps = null;
+  try {
+    c = dataSource.getConnection());
+    ps = c.prepareStatement("delete form users");
+    ps.excuteUpdate();
+  } catch(SQLException e) {
+    throw e;
+  } finally { // finally이므로 try에서 예외가 나든 안나든 실행된다.
+    if (ps != null) {
+      try {
+        ps.close();
+      } catch(SQLException e) { // ps.close()에서도 SQLException이 발생할 수 도 있다.
+      }
+    }
+    if (c != null) {
+      try {
+        c.close();
+      } catch (SQLException e) {
+      }
+    }
+  }
+}
+```
+---
+
+</details>
+
 
 ## 3.2 변하는것과 변하지 않는것
 
 ### 3.2.1 JDBC try - catch - finally 코드의 문제점
 
-- 문제점 2가지는? 중복으로 try-catch-finally로직이 들어감, 
-- 문제점을 해결하기위한 원칙은? 
+- JDBC try - catch - finally 문제점 2가지는? 
+
+<details>
+<summary>답변</summary>
+
+---
+1. finally안에도 try - catch가 나오면서 try-catch가 중첩된다.
+2. DAO 메소드마다 try - catch 절이 반복적으로 추가된다.
+---
+</details>
+
+- 이런 문제점을 해결하기위한 방법은?
+<details>
+<summary>답변</summary>
+
+---
+변하지 않고 많이 중복되는 코드와 로직에 따라 자꾸 변하고 확장되는 코드를 잘 분리하는 것이다.
+즉, 변하는것과 변하지 않는것을 분리하는 작업이 필요하다.
+
+---
+</details>
 
 ### 3.2.2 분리와 재상용을 위한 디자인 패턴
 코드 3-4
+```java
+Connection c = null;
+PreparedStatement ps = null;
+try {
+  c = dataSource.getConnection();
+  
+  ps = c.prepareStatement("delete from users"); // 여기 라인만 로직에 따라 바뀌고 확장되고 나머지 예외처리는 변하지 않고 중복된다.
+  
+} catch (SQLException e) {
+  throw e;
+} final {
+  if (ps != null) { try { ps.close(); }} catch (SQLException e) {} }
+  if (c != null) { try { c.close(); }} catch (SQLException e) {} }
+}
+```
 
-해결법1 - 메소드 추출 </br>
-- 어떠한 가?
+해결법1 - 메소드 추출 방식 적용</br>
+<details>
+<summary>답변</summary>
 
-해결법2 - 템플릿 메소드 </br>
-- 어떠한 가?
+---
+```java
+public void deleteAll() throws SQLException {
+  try {
+    c = dataSource.getConnection();
+    
+    ps = makeStatement(c);
+    
+    ps.executeUpdate();
+  } catch (SQLException e){
+        ...
+  }
+}
 
-해결법3 - 전략 패턴 </br>
-- 어떠한 가?
+private PreparedStatement makeStatement(Connection c) throws SQLException {
+  PreparedStatement ps;
+  ps = c.prepareStatement("delete from users");
+  return ps;
+}
+```
+변하고 확장되는 로직을 method로 추출했다. 하지만 이렇다고 추출한 method를 재사용할 수도 없고 남은 코드가 재사용되어서 중복을 줄여주지도 않는다.
+원하는 것과 정반대로 되었다.
 
-해결법4 - DI 적용을 위한 클라이언트 / 컨텍스트 분리 </br>
-- 어떠한 가?
+---
+</details>
 
+해결법2 - 템플릿 메소드 방식 적용 </br>
+<details>
+<summary>답변</summary>
 
-마이크로 DI </br>
+---
+템플릿 메소드를 상속을 이용해서 기능을 확장하는 패턴이다. </br>
+즉, 변하지 않는 코드는 슈퍼클래스에 두고 변하는 부분은 추상 메소드로 정의해서 서브 클래스에서 오버라이드하여 사용하는 패턴이다.
+
+UserDao를 추상클래스로 만들고 UserDaoDeleteAll는 이를 상속받은 후 makeStatement를 오버라이드하여 사용한다.
+
+```java
+
+import java.sql.PreparedStatement;
+
+public class UserDaoDeleteAll extends UserDao {
+  protected PreparedStatement makeStatement(Connection c) throws SQLException {
+    PreparedStatement ps = c.prepareStatement("Delete From users");
+    return ps;
+  }
+}
+```
+확실히 변하지 않는 코드를 재사용할 수 있지만 DAO로직마다 클래스를 하나씩 만들어야한다. </br>
+일반적인 Application에서 DAO로직마다 클래스를 만든다면 클래스가 엄청나게 많아질것이다. (클래스 폭발) </br>
+---
+</details>
+
+해결법3 - 전략 패턴 방식 적용</br>
+<details>
+<summary>답변</summary>
+
+---
+오브젝트를 둘로 나누고 클래스 레벨에서는 인터페이스를 통해서만 의존하는 전략 패턴이다.
+즉, 오브젝트 간에 합성을 통해서 로직이 실행되는 패턴이다.
+
+인터페이스
+```java
+import java.sql.PreparedStatement;
+import java.sql.SQLException;
+
+public interface StatementStrategy {
+  PreparedStatement makePreparedStatement(Connection c) throws SQLException;
+}
+```
+
+deleteAll() 메소드 기능을 구현한 전략 클래스
+```java
+import java.sql.PreparedStatement;
+import java.sql.SQLException;
+
+public class DeleteAllStatement implements StatementStrategy {
+  public PreparedStatement makePreparedStatement(Connection c) throws SQLException {
+    PreparedStatement ps = c.prepareStatement("delete from users");
+    return ps;
+  }
+}
+```
+
+전략 패턴으로 구현된 DeleteAllStatement를 사용하는 deleteAll 메소드
+```java
+public void deleteAll() throws SQLException {
+  ...
+  try {
+    c = dataSource.getConnection();
+    
+    StatementStrategy strategy = new DeleteAllStatement();
+    ps = strategy.makePreparedStatement(c);
+    
+    ps.excuteUpdate();
+  } catch (SQLException e) {
+        ...
+  }
+}
+```
+이렇게 전략패턴을 사용하는 것은 반쪽짜리이다.
+deleteAll에서는 DeleteAllStatement라는 전략을 사용할지 구체적으로 알고 있어야한다. 
+---
+</details>
+
+해결법3-1 - DI 적용을 위한 클라이언트 / 컨텍스트 분리 (반쪽짜리 전략 패턴 개선) </br>
+<details>
+<summary>답변</summary>
+
+---
+전략 패턴을 재대로 사용하려면 'Conext가 어떤 전략을 사용하게 할것인가?' 결정은 Client가 결정해야한다.
+Client가 하나의 Steraty를 선택하고 오브젝트를 만들어서 Context에 전달하는게 올바른 전략패턴이다.
+
+메소드로 분리한 try/catch/finally 컨텍스트 코드
+```java
+public void jdbcContextWithStatementStrategy(StatementStrategy stmt) throws SQLException { // StatementStrategy를 파라미터로 받는것이 핵심
+  Connection c = null;
+  PreparedStatement ps = null;
+  
+  try {
+    c = dataSource.getConnection();
+    ps = stmt.makePreparedStatement(c);
+    ps.excuteUpdate();
+  } catch (SQLException e) {
+    throw e;
+  } finally {
+    if (ps != null) { try { ps.close(); } catch (SQLException e) {} }
+    if (c != null) { try { c.close(); } catch (SQLException e) {} }
+  }
+}
+```
+클라이언트 책임을 담당할 deleteAll()메소드 
+```java
+public void deleteAll() throws SQLException {
+  StatementStrategy st = new DeleteAllStatement(); // 선정한 전략 클래스의 오브젝트 생성
+  jdbcContextWithStatementStrategy(st); // 컨텍스트 호출, 전략 오브젝트 전달 
+}
+```
+---
+</details>
+
 DI의 가장 중요한 개념은?
+<details>
+<summary>답변</summary>
+
+---
+DI의 가장 중요한 개념은 제3자의 도움을 통해 두 오브젝트 사이의 유연한 관계가 설정되도록 만든다는 것이다. </br>
+이 개념은 오브젝트와 구성요소의 구조나 관계를 다양하게 만들수 있게 만든다. 
+---
+</details>
 
 ## 3.3 JDBC전략 패턴의 최적화
 
