--- a/spring/토비의-스프링부트-3.1/04장-예외.md
+++ b/spring/토비의-스프링부트-3.1/04장-예외.md
@@ -80,7 +80,7 @@ try{
 
 ---
 
-개발중에는 IDE 콘솔이나 서버 실행창에 이 메시지가 보일 순 있지만 다른 로그에 묻혀 놓치기도 쉽상이다.
+개발중에는 IDE 콘솔이나 서버 실행창에 이 메시지가 보일 순 있지만 다른 로그에 묻혀 놓치기도 쉽상이다. </br>
 운영 서버에서는 로그를 모니터링하고 있지 않을테니 엄청나게 큰 폭탄이 될 수 있다.
 
 ---
@@ -107,7 +107,7 @@ try{
   System.exit(1);
 }
 ```
-차라리 예외를 받으면 스택트레이스에 표시하고 시스템에 예외를 던지는것이 차선책이다.
+차라리 예외를 받으면 스택트레이스에 표시하고 시스템에 예외를 던지는것이 차선책이다. </br>
 예외를 받으면 throw를 던지고 메소드 밖으로 던지고 자신을 호출한 코드에 책임을 전가하는것이 차선이다.
 
 예외를 받아서 처리 할수 있거나 개발자, 운영자에게 통보해주는것이 최선책이다.
@@ -134,9 +134,9 @@ public void method3() throws Exception {
 <summary>답변</summary>
 
 ---
-내가 사용하려는 메소드가 throws Exception이 붙여있으면 메소드에서 어떤 에러가 발생하는지 자세한 정보를 받을 수 없다.
-실제로 실행중에 어떤 예외가 발생하는지? 아니면 습관적으로 예외처리를 해둔것인지? 알 수가 없다.
-이런 메소드를 사용하면 나또한 throws Exception을 붙여야한다. 그러면서 예외처리 할 기회가 박탈된다.
+내가 사용하려는 메소드가 throws Exception이 붙여있으면 메소드에서 어떤 에러가 발생하는지 자세한 정보를 받을 수 없다. </br>
+실제로 실행중에 어떤 예외가 발생하는지? 아니면 습관적으로 예외처리를 해둔것인지? 알 수가 없다. </br>
+이런 메소드를 사용하면 나또한 throws Exception을 붙여야한다. 그러면서 예외처리 할 기회가 박탈된다. </br>
 
 예외를 무시하는 코드도 정말 나쁜 코드지만 이렇게 예외를 뭉뜨그리는 코드도 정말 나쁜 코드이다.
 
