docs: 토비의 스프링 - 4장 예외 - 4.1.2 정리

--- a/spring/토비의-스프링부트-3.1/04장-예외.md
+++ b/spring/토비의-스프링부트-3.1/04장-예외.md
@@ -142,3 +142,58 @@ public void method3() throws Exception {
 
 ---
 </details>
+
+### 4.1.2 예외의 종류와 특징
+자바에서 throw를 통해서 발생시킬 수 있는 예외는 크게 3가지가 있다. 무엇인가?
+
+<details>
+<summary>답변</summary>
+
+---
+Error, Checked Exception, Unchecked Exception이 있다.
+
+---
+
+</details>
+
+Error는 어떤 상태에서 발생하고 어떻게 대응해야하는가?
+
+<details>
+<summary>답변</summary>
+
+---
+Error는 JVM에서 발생하는 Error이다. outOfMemoryError나 ThreadDeath 같은 Error가 발생하기때문에 try - catch로는 잡을 수 없다. </br>
+대응하려면 시스템 레벨에서 대응해야한다. 
+---
+
+</details>
+
+Checked Exception은 란 무엇이고 어떤 상태에서 발생하고 어떻게 대응해야하는가? 
+
+<details>
+<summary>답변</summary>
+
+---
+Exception 클래스의 서브클래스이면서 RuntimeException클래스를 상속하지 않는 예외를 말한다. </br>
+체크 예외가 발생할 수 있는 메소드를 사용할 경우 반드시 예외 처리 코드를 함께 작성해야한다. (catch로 잡든지 throw로 다시 밖으로 보내든지)
+
+(Checked Exception은 개발자에게 이런 경우를 고려하세요 라고 표현하는 것이다.)
+
+---
+
+</details>
+
+Unchecked Exception은 란 무엇이고 어떤 상태에서 발생하고 어떻게 대응해야하는가?
+
+<details>
+<summary>답변</summary>
+
+---
+런타임 예외는 주로 프로그램의 오류가 있을때 발생한다. 
+보통 개발자의 부주의로 나타나는 오류이다. 
+자바에서 런타임 예외는 catch나 throws를 통해서 예외를 잡지 않아도록 만들어졌다.
+(명시적으로 catch하거나 throws를 해도 되고 그런 에러가 안나도록 프로그래밍하는 것이 좋다. 난 이런 에러가 안나도록 사전에 프로그래밍하는것을 선호한다.)
+
+---
+
+</details>
