--- a/spring/토비의-스프링부트-3.1/02장-테스트.md
+++ b/spring/토비의-스프링부트-3.1/02장-테스트.md
@@ -45,4 +45,24 @@ QA팀에 어플리케이션을 배포하고 코드의 버그를 피드백 받아
 만약 처음부터 스프링을 적용하고 XML로 설정을 만들고 모든 코드를 다 만들고 난뒤에 검증을 하려고하면 아마 쏟아지는 에러 메시지에 막막해질 수 도 있다.
 또 이 에러가 스프링을 잘못 사용한것인지, 설정에 오류인지, DAO 코드 자체가 문제인지 찾아내는데 많은 시간을 보낼 수 도 있다.
 
-### 
+### 정리
+
+2장에서는 다음과 같이 테이스의 필요성과 작성 방법을 살펴봤다.
+
+1. 테스트는 자동화 되어야하고, 반복 수행되어야 하고, 빠르게 실행할 수 있어야 한다.
+2. main() 테스트 대신 JUnit 프레임워크를 이용한 테스트 작성이 편리하다.
+3. 테스트 결과는 일관성이 있어야한다. 코드의 변경 없이 환경이나 테스트 실행 순서에 따라서 결과가 달라지면 안된다. 
+4. 테스트는 포괄적으로 작성해야한다. 충분한 검증을 하지 않는 테스트는 없는 것 보다 나쁠 수 있다.
+5. 코드 작성과 테스트 수행의 간격이 짧을수록 효과적이다. (간격이 길면 코드 작성도 많았을거고 그러면 많은 코드중에 무엇이 에러 원인인지 찾기 어려울 수 있다.)
+6. 테스트 하기 쉬운 코드가 좋은 코드다.
+7. 테스트를 먼저 만들고 테스트를 성공시키는 코드를 만들어가는 테스트 주도 개발 방법도 유용하다.
+8. 테스트 코드도 애플리케이션 코드와 마찬가지로 적절한 리펙토링이 필요하다.
+9. @Before, @After를 사용해서 테스트 메소드들의 공통 준비 작업과 정리 작업을 처리할 수 있다.
+10. 스프링 테스트 컨텍스트 프레임워크를 이용하면 테스트 성능을 향상시킬 수 있다.
+11. 동일한 설정파일을 사용하는 테스트는 하나의 애플리케이션 컨텍스트를 공유한다.
+12. @Autowired를 사용하면 컨텍스트의 빈을 테스트 오브젝트에 DI할 수 있다. 
+13. 기술을 사용하고 방법을 익히고 이해를 돕기 위해 학습 테스트(Learning Test)를 작성하자.
+14. 오류가 발견될 경우 그에 대한 버그 테스트를 만들어주면 유용하다. </br>
+    (오류가 발견되면 제일 먼저 오류 발견 시나리오대로 테스트 코드를 작성해라. 그리고 반복적으로 재현하며 버그를 수정하라.)
+
+서버 개발자라면 자신의 코드가 테스트로 검증되는 방법을 알고 있어야하고 테스트를 개발에 적극 활용할 수 있어야한다.
