--- a/jpa/자바-orm-표준-jpa-프로그래밍/06장-다양한-연관관계-매핑.md
+++ b/jpa/자바-orm-표준-jpa-프로그래밍/06장-다양한-연관관계-매핑.md
@@ -86,7 +86,7 @@ public class Team {
 - 양방향 연관관계는 항상 서로를 참조해야한다.
 - 편의 메소드는 한곳만 작성하거나, 양쪽에 작성할 수 있다. 단, 양쪽에 작성하면 무한루프에 빠지지않도록 예외처리해야한다.
 
-## 6.2 일대다 [1:N] (사용X, 읽기X)
+## 6.2 일대다 [1:N] (1쪽이 주인, 사용X, 읽기X)
 
 - 일대다 관계에서 반대 방향은 다대일 관계이다.
 - 일대다 관계에서는 엔티티를 하나 이상 참조하기 때문에 Collection, Map, Set, List중 하나를 사용해야한다.
@@ -564,7 +564,7 @@ public void saveAndFind() {
 }
 ```
 
-6.4.5 다대다 연관 관계 정리
+### 6.4.5 다대다 연관 관계 정리
 다대다 관계를 일대다 관계로 풀어내기 위해서는 맵핑 테이블을 만들때 식별관계 또는 비식별 관계를 사용할지 정해야한다. </br>
 비식별 관계를 사용하면 기본키가 단순하고 별도의 클래스를 만들지 않아도 되며 편리하게 맵핑할 수 있다. </br>
 그래서 식별 관계보다는 비식별 관계를 사용하는 것이 좋다.  </br>
