docs: 자바 ORM 표준 JPA 프로그래밍 - 7장의 7.3 내용 정리

--- a/jpa/자바-orm-표준-jpa-프로그래밍/07장-고급-매핑.md
+++ b/jpa/자바-orm-표준-jpa-프로그래밍/07장-고급-매핑.md
@@ -146,26 +146,144 @@ public class Movie extends Item { ... }
 ```java
 @MappedSuperclass
 public abstract class BaseEntity { // note: 이 테이블을 생성할 일이 거의 없어서 abstract class를 사용한다.
-   @Id @GeneratedValue
-   private Long id;
-   private String name;
+  @Id @GeneratedValue
+  private Long id;
+  private String name;
 }
 
 @Entity
 public class Member extends BaseEntity {
-   // id 상속
-   // name 상속
-   private String email;
+  // id 상속
+  // name 상속
+  private String email;
 }
 
 @Entity
 public class Seller extends BaseEntity {
-   // id 상속
-   // name 상속
-   private String shopName;
+  // id 상속
+  // name 상속
+  private String shopName;
 }
 ```
- 특징
+특징
 1. 부모 클래스는 테이블에 맵핑되지 않고 자식 클래스에게 맵핑 정보만 제공한다.
 2. @MappedSuperclass가 선언된 클래스는 엔티티가 아니기에 em.find나 JPQL에서 사용 할 수 없다.
 3. 이 클래스를 직접 사용할 일이 없어 추상클래스로 만드는 것을 추천한다.
+
+## 7.3 복합키와 식별 관계 매핑
+
+### 7.3.1 식별 관계 vs 비식별 관계 비교
+
+식별 관계란: 부모 테이블의 기본 키를 내려받아서 자식 테이블의 기본키 + 외래키로 사용하는 관계이다. 
+비식별 관계란: 부모 테이블의 기본 키를 내려받아서 자식 테이블의 외래키로만 사용하는 관계이다. (비식별 관계는 필수적 또는 선택적 비식별 관계로 나누어진다.)
+- 필수적 비식별 관계: 자식 테이블의 외래키에 null이 들어갈 수 없다. (반드시 연관관계를 맺어야한다.)
+- 선택적 비식별 관계: 자식 테이블의 외래키에 null이 들어갈 수 있다. (연관관계를 맺어도 되고 안맺어도 된다.)
+
+**요즘에는 비식별 관계를 만드는 것을 추천한다.**
+
+### 7.3.2 복합키: 비식별 관계 매핑
+
+JPA에서 식별자를 둘 이상 사용하려면 별도의 식별자 클래스를 만들어야한다.
+또한 식별자 클래스에는 equals와 hashCode를 구현해야한다.
+```java
+@Entity
+public class Hello {
+  @Id
+  private String id1;
+  @Id
+  private String id2;
+}
+```
+
+JPA에서 복합키를 지원하는 방법은 @IdClass와 @EmbeddedId가 있다.
+
+[그림]
+
+#### @IdClass
+
+```java
+import java.io.Serializable;
+import javax.swing.plaf.PanelUI;
+import jdk.jfr.Enabled;
+
+@Entity
+@IdClass(ParentId.class)
+public class Parent { // note: 부모 클래스
+   @Id
+   @Column(name = "PARENT_ID1")
+   private String id1;
+   @Id
+   @Column(name = "PARENT_ID2")
+   private String id2;
+
+   private String name;
+}
+
+public class ParentId implements Serializable { // note: 식별자 클래스
+   private String id1;
+   private String id2;
+
+   public ParentId() {
+   }
+
+   public ParentId(String id1, String id2) {
+      this.id1 = id1;
+      this.id2 = id2;
+   }
+
+   @Override
+   public boolean equals(Object e) { ...}
+
+   @Override
+   public boolean hashCode(Object e) { ...}
+}
+
+@Entity
+public class Child { // note: 자식 클래스
+  @Id
+  private String id;
+  
+  @ManyToOne
+  @JoinColumns({ // note: 부모의 기본키가 복합키여서 자식 테이블에서도 외래키가 복합키이다. 외래키이기에 @JoinColumn을 사용한다. @JoinColumn은 외래키를 맵핑할때 사용한다.
+     @JoinColumn(name = "PARENT_ID1", referencedColumnName = "PARENT_ID1"),
+     @JoinColumn(name = "PARENT_ID2", referencedColumnName = "PARENT_ID2")
+  })
+  private Parent parent;
+}
+```
+
+@IdClass를 사용할때는 아래 조건을 만족해야한다. 
+- 식별자 클래스의 속성명과 사용하는 식별자의 속성명(부모 테이블의 속성명)이 같아야한다.
+- Serializable 인터페이스를 구현해야한다.
+- equals와 hashCode를 구현해야한다.
+- 기본 생성자가 있어야한다.
+- 식별자 클래스는 public이어야한다.
+
+#### @EmbeddedId
+
+```java
+@Entity
+public class Parent { // note: 부모 클래스
+  @EmbeddedId
+  private ParentId id; // note: 식별자 클래스 사용
+
+  private String name;
+}
+
+@Embeddable
+public class ParentId implements Serializable {
+  @Column(name = "PARENT_ID1")
+  private String id1;
+  @Column(name = "PARENT_ID2")
+  private String id2;
+  
+  // equals and hashCode 구현
+}
+```
+
+@EmbeddedId를 사용할때는 아래 조건을 만족해야한다.
+- @Embeddable을 사용해서 식별자 클래스를 만들어야한다.
+- Serializable 인터페이스를 구현해야한다.
+- equals와 hashCode를 구현해야한다.
+- 기본 생성자가 있어야한다.
+- 식별자 클래스는 public이어야한다.
