refactoring: sql levelup 2~4장 내용 리펙토링

--- a/rdb/sql-레벨업/04장-집약과-자르기.md
+++ b/rdb/sql-레벨업/04장-집약과-자르기.md
@@ -66,10 +66,10 @@ HAShAggregate (cost=1.38..1.41 rows=3 width=30)
 groupby를 데이터를 묶으면 groupby키별로 3개의 레코드가 있다. </br>
 3개의 레코드중 max를 이용하면 하나의 레코드 값을 가져올 수 있다. </br>
 
-최근에는 groupby를 사용하면 hASh집약을 하며 성능이 개선되었다. </br>
-hASh집약은 groupby키를 해시값으로 변환하고 값이 해시값들의 레코드를 모아서 집약한다. </br> 
-만약 이때 hASh집약할때 워킹메모리가 적으면 디스크에 저장하고 집약을 하기때문에 성능이 저하된다. </br>
-이렇게 디스크를 사용하는것을 **Temp 탈락이라고 부른다.
+최근에는 groupby를 사용하면 hash집약을 하며 성능이 개선되었다. </br>
+hash집약은 groupby키를 해시값으로 변환하고 값이 해시값들의 레코드를 모아서 집약한다. </br> 
+만약 이때 hash집약할때 워킹메모리가 적으면 디스크에 저장하고 집약을 하기때문에 성능이 저하된다. </br>
+이렇게 디스크를 사용하는것을 **[Temp 탈락]이라고 부른다.
 
 ### 2. 합쳐서 하나
 
@@ -85,7 +85,7 @@ bookingTable
 | 102       | 2020-01-06 | 2020-01-11 |
 
 ```SQL
-SELECT room_name, sum(check_out - check_in) AS booking_days_
+SELECT room_name, sum(check_out - check_in) AS booking_days
 FROM room
 group by room_name
 having sum(check_out - check_in) >= 10;
@@ -207,4 +207,4 @@ ORDER BY age_class, age_rank_in_class;
 | chris    | 70  | 노인      | 1                 |
 | bates    | 80  | 노인      | 2                 |
 
-partitionBy에서 중요한것은 집약 기능이 없기때문에 원래 레코드의 결과는 동일하게 나온다는것이다.
+partitionBy에서 중요한것은 집약 기능이 없기때문에 원래 테이블의 레코드 수와 동일한 레코드 수가 나온다.
