docs: sql levelup 5장 16강 요약

--- a/rdb/sql-레벨업/05장-반복문.md
+++ b/rdb/sql-레벨업/05장-반복문.md
@@ -37,4 +37,163 @@ A: 반복문이 없는 것이 좋다고 생각했기 때문이다.
 2. 반복계의 단순한 쿼리를 튜닝 --> 단순한 쿼리이기에 쿼리 튜닝할 여지가 많지 않다.
 3. 다중화 처리 --> 처음부터 반복계를 다중화해서 처리할 수 있게 만들었다면 가능한 방법, 단 `데이터 분할 수 있는 키`, `순서의 중요도`, `서버의 물리적 리소스`를 보고 판단해야한다.
 
-결과적으로 반복계를 사용하면 성능 튜닝 선택지가 한정적이다.
+결과적으로 반복계를 사용하면 성능 튜닝 선택지가 한정적이다. </br>
+포장계는 반복계의 장점과 단점이 반대로 되어있다. </br>
+
+
+## 16강 SQL에서는 반복을 어떻게 표현할까? 
+
+지금까지 반복계와 포장계의 장단점을 알아보았다. </br>
+그러면 반복계를 반복문을 어떻게 바꾸어서 포장계로 바꿀 수 있을까? </br> 
+
+### 1. SQL문의 반복의 포인트는 case식과 윈도우 함수
+
+sales
+
+| company | year | sale |
+|---------|------|------|
+| A       | 2002 | 50   |
+| A       | 2003 | 52   |
+| A       | 2004 | 55   |
+| A       | 2007 | 55   |
+| B       | 2001 | 27   |
+| B       | 2005 | 28   |
+| B       | 2006 | 28   |
+| B       | 2009 | 30   |
+| C       | 2001 | 40   |
+| C       | 2005 | 39   |
+| C       | 2006 | 38   |
+| C       | 2010 | 35   |
+
+sales2 
+
+| company | year | sale | var(변화) |
+|---------|------|------|---------|
+| A       | 2002 | 50   |         |
+| A       | 2003 | 52   | +       |
+| A       | 2004 | 55   | +       |
+| A       | 2007 | 55   | =       |
+| B       | 2001 | 27   |         |
+| B       | 2005 | 28   | +       |
+| B       | 2006 | 28   | =       |
+| B       | 2009 | 30   | +       |
+| C       | 2001 | 40   |         |
+| C       | 2005 | 39   | -       |
+| C       | 2006 | 38   | -       |
+| C       | 2010 | 35   | _       |
+
+원본테이블이 sales1처럼 있을때 salse2처럼 각 회사별 년도마다 sale 증감을 표시하려면 어떻게 해야할까? </br>
+</br>
+
+반복계로 처리하려면 먼저 데이터를 읽어와서 반복문으로 데이터를 처리하고 다시 테이블에 데이터를 넣을것이다. </br>
+이렇게 로직을 처리할때 실행하면서 같은 회사의 데이터인지 아닌지 등을 따져가면서 예외처리를 진행해야할것이다. </br>
+또한 레코드가 많아지면 프로그래밍적인 처리와 여러번의 SQL 실행으로 성능이 떨어질것이다.  </br>
+
+그러면 이것을 포장계로 어떻게 바꿀 수 있을까?
+
+```SQL
+INSERT INTO  sales2
+SELECT company, year, sale,
+       CASE SIGN(sale - MAX(sale) OVER (PARTITION BY company ORDER BY year ROWS BETWEEN 1 PRECEDING AND 1 PRECEDING))
+            WHEN 1 THEN '+'
+            WHEN -1 THEN '-'
+            WHEN 0 THEN '='
+            ELSE null
+       END AS var
+FROM sales;
+```
+SQL로는 이렇게 간단히 표현할 수 있다.  </br>
+쿼리를 잠시 설명하자면 `sign`함수는 인수가 양수이면 1, 음수이면 -1, 0이면 0을 반환한다. </br>
+`ROWS BETWEEN 1 PRECEDING AND 1 PRECEDING`는 윈도우함수가 실행되면서 바로 직전레코드를 선택한다. </br>
+그래서 case식을 동작을 설명하면 SIGN(현재레코드 - 직전레코드[회사별레코드묶음의 year로정렬한 직전레코드1개중 최고값을 선택])이 된다. </br>
+(직전레코드를 1개밖에없어서 max함수를 사용하면 레코드1개가 선택된다.)
+
+### 2. 최대 반복 횟수가 정해진 경우
+
+postal_code
+
+| postal_code | district_name |
+|-------------|---------------|
+| 4130001     | 서울 강남         | 
+| 4130002     | 서울 강북         | 
+| 4130103     | 서울 강동         | 
+| 4130041     | 서울 강서         | 
+| 4130005     | 서울 중앙         | 
+| 4103213     | 서울 외곽         | 
+| 4380087     | 서울 남산         | 
+
+여기에서 4130033 이라는 우편번호가 주어지면 이때 가장 가까이 있는 우편번호는 어떻게 검색할 수 있을까?
+
+먼저 반복계 방식을 살펴보면 4130033 413003* 41300** 4130*** .... 4****** 여러번 like검색을 진행할 것이다.
+이렇게되면 쿼리가 7번이 실행되어야하는데 작은 테이블이면 문제가 없지만 수천만건, 수백만건의 테이블이면 성능저하가 일어날 것이다.
+
+그러면 이것을 포장계로 어떻게 바꿀 수 있을까?
+```SQL
+SELECT postal_code, district_name,
+    CASE WHEN postal_code LIKE '4130033%' THEN 1
+         WHEN postal_code LIKE '413003%' THEN 2
+         WHEN postal_code LIKE '41300%' THEN 3
+         WHEN postal_code LIKE '4130%' THEN 4
+         WHEN postal_code LIKE '413%' THEN 5
+         WHEN postal_code LIKE '41%' THEN 6
+         WHEN postal_code LIKE '4%' THEN 7
+         ELSE 8
+    END AS rank
+FROM postal_code
+```
+(위 쿼리는 어플리케이션에서 우편번호가 주어지면 동적으로 쿼리를 만들어서 실행해야한다.)
+이렇게 순위를 매겨서 가장 가까운 우편번호를 순위를 매길 수 있다. </br>
+
+
+```SQL
+SELECT postal_code, district_name
+FROM postal_code
+WHERE CASE WHEN postal_code LIKE '4130033%' THEN 1
+           WHEN postal_code LIKE '413003%' THEN 2
+           WHEN postal_code LIKE '41300%' THEN 3
+           WHEN postal_code LIKE '4130%' THEN 4
+           WHEN postal_code LIKE '413%' THEN 5
+           WHEN postal_code LIKE '41%' THEN 6
+           WHEN postal_code LIKE '4%' THEN 7
+           ELSE null
+      END = (SELECT MIN(CASE WHEN postal_code LIKE '4130033%' THEN 1
+                             WHEN postal_code LIKE '413003%' THEN 2
+                             WHEN postal_code LIKE '41300%' THEN 3
+                             WHEN postal_code LIKE '4130%' THEN 4
+                             WHEN postal_code LIKE '413%' THEN 5
+                             WHEN postal_code LIKE '41%' THEN 6
+                             WHEN postal_code LIKE '4%' THEN 7
+                             ELSE null
+                        END)
+             FROM postal_code)
+-----------------------------------------------------------
+Seq Scan on postal_code (cost=1.19..2.37 rows=1 width=8)
+    Filter: (CASE WHEN postal_code LIKE '4130033%' THEN 1
+                  WHEN postal_code LIKE '413003%' THEN 2
+                  WHEN postal_code LIKE '41300%' THEN 3
+                  WHEN postal_code LIKE '4130%' THEN 4
+                  WHEN postal_code LIKE '413%' THEN 5
+                  WHEN postal_code LIKE '41%' THEN 6
+                  WHEN postal_code LIKE '4%' THEN 7
+                  ELSE NULL::integer END $0))
+    InitPlan 1 (returns $0)
+    ->  Aggregate  (cost=1.18..1.19 rows=1 width=8)
+        ->  Seq Scan on postal_code (cost=0.00..1.06 rows=6 width=8)
+```
+위 쿼리는 2번의 테이블 풀스캔이 발생했다. </br>
+위 쿼리 동작 방식을 설명하면 먼저 where절안에서 사용되는 서브쿼리를 먼저 실행한다. </br>
+서브 쿼리는 테이블 풀스캔하여 가장 가까운 우편번호의 순위를 찾는다. 예를들어 1을 반환했다고 가정한다. </br>
+그다음으로 외부 쿼리가 다시 풀스캔하여 실행되고 각 레코드마다 where절의 case식으로 순위를 판단한다.  </br>
+이때 각 레코드가 서브쿼리에서 반환된 값 1과 같은지 비교하면서 1과 같은 레코드가 최종적으로 반환된다.  </br>
+
+<b> 여기서 핵심은 7번 반복해서 쿼리를 날리지 않고 case문으로 7번 case 분기를 했다는 것이다. </br> </b>
+
+이 코드를 window함수로 바꾸면 1번의 쿼리로 바꿔서 처리할 수 있다. </br> 
+여기에서는 적지 않겠다. </br>
+
+### 3. 반복 횟수가 정해지지 않는 경우
+
+이번에는 반복 횟수가 정해지지 않는 경우를 살펴보자. </br>
+DB 모델링을하다보면 계층구조의 데이터 또는 포인터 체인 형식의 데이터가 있는데 이런경우에는 재귀 쿼리를 이용해서 처리할 수 있다. </br>
+재귀 쿼리는 CTE(Common Table Expression)를 사용해서 처리하면 된다. </br>
+
