--- a/rdb/sql-레벨업/05장-반복문.md
+++ b/rdb/sql-레벨업/05장-반복문.md
@@ -197,3 +197,16 @@ Seq Scan on postal_code (cost=1.19..2.37 rows=1 width=8)
 DB 모델링을하다보면 계층구조의 데이터 또는 포인터 체인 형식의 데이터가 있는데 이런경우에는 재귀 쿼리를 이용해서 처리할 수 있다. </br>
 재귀 쿼리는 CTE(Common Table Expression)를 사용해서 처리하면 된다. </br>
 
+## 17강 바이어스의 공죄
+
+바이어스(색안경)이 없는 사람은 없다. </br>
+바이어스가 없으면 사람은 사물을 판단하거나 관찰할 수 없다. </br>
+하지만 바이어스에 갇히면 다른 관점에서 사물을 바라보기 힘들다. </br>
+즉 바이어스는 양날의 검과 같다. </br>
+
+SQL은 데이터를 다룰때 과정은 생략하고 결과를 기술하게만든 언어이다. </br>
+이런 SQL 설계는 생산성을 높이는데 기여했다. </br>
+우리는 과정, 어떻게(How)를 생각하는 절차지향적 사고가 아니라 결과를 생각하게하는 집합적 사고를 하는것이 중요하다. </br>
+그래야 SQL을 재대로 사용하면서 생산성과 성능을 높일 수 있다. </br>
+
+우리 모두 SQL을 작성할때는 절차지향적 바이어스를 내려놓고 포장계와 반복계의 장단점을 생각하며 가장 적합한 방식을 채택해서 사용해야 할것이다. </br>
